--- a/publication.html
+++ b/publication.html
@@ -184,7 +184,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/1.jpg" alt="cover">
+                                                        <img src="img/blog/2.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -192,13 +192,14 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">PATENT</div>
+                                                            <div class="mil-label mil-upper">Jan 03 2025</div>
                                                         </div>
-                                                        <h5>Interior design studio</h5>
+                                                        <h5>Smart Classroom Systems</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="120" data-swiper-parallax-opacity="0">
-                                                        <a href="project-1.html" class="mil-button mil-arrow-place">
+                                                        <a href="https://drive.google.com/file/d/1cXLu-6AWcFvFNTqnAGitlUA1bklJYJ_2/view?usp=drive_link"
+                                                            class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -211,7 +212,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/2.jpg" alt="cover">
+                                                        <img src="img/blog/1.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -219,13 +220,14 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">PATENT</div>
+                                                            <div class="mil-label mil-upper">June 20 2025</div>
                                                         </div>
-                                                        <h5>Home Security Camera</h5>
+                                                        <h5>AgroSentinel</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-2.html" class="mil-button mil-arrow-place">
+                                                        <a href="https://drive.google.com/file/d/17S0UJuXy-SyHs_gt7mQUrNN9f5KrUyWX/view?usp=sharing"
+                                                            class="mil-button mil-arrow-place">
                                                             <span>View Project</span>
                                                         </a>
                                                     </div>
@@ -238,7 +240,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/3.jpg" alt="cover">
+                                                        <img src="img/blog/images.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -246,14 +248,15 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">Research Paper
+                                                            </div>
+                                                            <div class="mil-label mil-upper">Under Process</div>
                                                         </div>
-                                                        <h5>Kemia Honest Skincare</h5>
+                                                        <h5>V2X Communication on Blockchain & Aadhar Integration</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-3.html" class="mil-button mil-arrow-place">
-                                                            <span>View Project</span>
+                                                        <a href="#" class="mil-button mil-arrow-place">
+                                                            <span>Coming Soon</span>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -265,7 +268,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/4.jpg" alt="cover">
+                                                        <img src="img/blog/images.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -273,14 +276,14 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">PATENT</div>
+                                                            <div class="mil-label mil-upper">UNDER PROCESS</div>
                                                         </div>
-                                                        <h5>Cascade of Lava</h5>
+                                                        <h5>GrowEase Technology</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-4.html" class="mil-button mil-arrow-place">
-                                                            <span>View Project</span>
+                                                        <a href="#" class="mil-button mil-arrow-place">
+                                                            <span>Coming Soon</span>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -292,7 +295,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/5.jpg" alt="cover">
+                                                        <img src="img/blog/images.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -300,41 +303,14 @@
                                                     <div class="mil-descr-text" data-swiper-parallax-y="100%"
                                                         data-swiper-parallax-opacity="0">
                                                         <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                                            <div class="mil-label mil-upper mil-accent">PATENT</div>
+                                                            <div class="mil-label mil-upper">UNDER PROCESS</div>
                                                         </div>
-                                                        <h5>Air Pro by Molekule</h5>
+                                                        <h5>SolSight Device</h5>
                                                     </div>
                                                     <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-5.html" class="mil-button mil-arrow-place">
-                                                            <span>View Project</span>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="swiper-slide">
-
-                                            <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
-                                                <div class="mil-cover-frame mil-drag">
-                                                    <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/6.jpg" alt="cover">
-                                                    </div>
-                                                </div>
-                                                <div class="mil-descr" data-swiper-parallax-x="104%"
-                                                    data-swiper-parallax-opacity="0">
-                                                    <div class="mil-descr-text" data-swiper-parallax-y="100%"
-                                                        data-swiper-parallax-opacity="0">
-                                                        <div class="mil-labels mil-mb-15">
-                                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                                        </div>
-                                                        <h5>Tony's Chocolonely</h5>
-                                                    </div>
-                                                    <div data-swiper-parallax-y="100%" data-swiper-parallax-opacity="0">
-                                                        <a href="project-6.html" class="mil-button mil-arrow-place">
-                                                            <span>View Project</span>
+                                                        <a href="#" class="mil-button mil-arrow-place">
+                                                            <span>Coming Soon</span>
                                                         </a>
                                                     </div>
                                                 </div>
