final changes to deploying

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,15 +10,15 @@
         content="Get in touch with Vardan Agarwal for Web3 development, full-stack projects, and blockchain consulting. Let's build something amazing together.">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/plugins/font-awesome.min.css">
     <!-- swiper css -->
-    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="/css/plugins/swiper.min.css">
     <!-- fancybox css -->
-    <link rel="stylesheet" href="css/plugins/fancybox.min.css">
+    <link rel="stylesheet" href="/css/plugins/fancybox.min.css">
     <!-- ashley scss -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- page name -->
     <title>Vardan Agarwal - Contact</title>
 
@@ -71,7 +71,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">V.</a>
+                <a href="/" class="mil-logo">V.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -85,20 +85,20 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-has-children">
-                                        <a href="home-1.html">Homepage</a>
+                                        <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="portfolio-3.html">Portfolio</a>
+                                        <a href="/portfolio">Portfolio</a>
 
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="services.html">Services</a>
+                                        <a href="/services">Services</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="publication.html">Publications</a>
+                                        <a href="/publication">Publications</a>
                                     </li>
                                     <li class="mil-active">
-                                        <a href="contact.html">Contact Me</a>
+                                        <a href="/contact">Contact Me</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -138,7 +138,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">V.</a>
+                <a href="/" class="mil-logo">V.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -163,8 +163,8 @@
                     <div class="mil-banner-content mil-center mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="/">Homepage</a></li>
+                                <li><a href="/contact">Contact</a></li>
                             </ul>
                             <h1 class="mil-mb-60">Get in touch!</h1>
                             <a href="#contact" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
@@ -225,19 +225,19 @@
                                             <nav class="mil-footer-menu">
                                                 <ul>
                                                     <li class="mil-up">
-                                                        <a href="home-1.html">Home</a>
+                                                        <a href="/">Home</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="portfolio-3.html">Portfolio</a>
+                                                        <a href="/portfolio">Portfolio</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="services.html">Services</a>
+                                                        <a href="/services">Services</a>
                                                     </li>
                                                     <li class="mil-up mil-active">
-                                                        <a href="contact.html">Contact</a>
+                                                        <a href="/contact">Contact</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="publication.html">Publications</a>
+                                                        <a href="/publication">Publications</a>
                                                     </li>
                                                 </ul>
                                             </nav>
@@ -400,25 +400,25 @@
     <!-- wrapper end -->
 
     <!-- jQuery js -->
-    <script src="js/plugins/jquery.min.js"></script>
+    <script src="/js/plugins/jquery.min.js"></script>
     <!-- swup js -->
-    <script src="js/plugins/swup.min.js"></script>
+    <script src="/js/plugins/swup.min.js"></script>
     <!-- swiper js -->
-    <script src="js/plugins/swiper.min.js"></script>
+    <script src="/js/plugins/swiper.min.js"></script>
     <!-- fancybox js -->
-    <script src="js/plugins/fancybox.min.js"></script>
+    <script src="/js/plugins/fancybox.min.js"></script>
     <!-- gsap js -->
-    <script src="js/plugins/gsap.min.js"></script>
+    <script src="/js/plugins/gsap.min.js"></script>
     <!-- scroll smoother -->
-    <script src="js/plugins/smooth-scroll.js"></script>
+    <script src="/js/plugins/smooth-scroll.js"></script>
     <!-- scroll trigger js -->
-    <script src="js/plugins/ScrollTrigger.min.js"></script>
+    <script src="/js/plugins/ScrollTrigger.min.js"></script>
     <!-- scroll to js -->
-    <script src="js/plugins/ScrollTo.min.js"></script>
+    <script src="/js/plugins/ScrollTo.min.js"></script>
     <!-- ashley js -->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
     <!-- contact form js -->
-    <script src="js/contact-form.js"></script>
+    <script src="/js/contact-form.js"></script>
 
 </body>
 
