--- a/publication.html
+++ b/publication.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description"
+        content="Vardan Agarwal's research publications and patents in IoT, AI/ML, and smart systems including Smart Classroom Systems, AgroSentinel, and V2X Communication.">
 
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
@@ -36,7 +38,7 @@
                 </svg>
             </span>
             <div class="mil-more-text">More</div>
-            <div class="mil-choose-text">Сhoose</div>
+            <div class="mil-choose-text">Choose</div>
         </div>
         <!-- cursor end -->
 
@@ -52,7 +54,7 @@
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">vardan.me</p>
+                        <p class="mil-h3 mil-muted mil-thin">vardanagarwal.dev</p>
                     </div>
                 </div>
             </div>
@@ -114,9 +116,8 @@
                                 <div class="mil-menu-right">
                                     <div class="row">
                                         <div class="col-lg-8 mil-mb-60">
-
-
-
+                                            <h4 class="mil-upper mil-mb-30">My Research & Patents</h4>
+                                            <p class="mil-light-soft">Innovation in IoT, AI/ML, and smart systems</p>
                                         </div>
                                     </div>
                                 </div>
