--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">V.</a>
+                <a href="/" class="mil-logo">V.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -85,20 +85,20 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-active">
-                                        <a href="home-1.html">Homepage</a>
+                                        <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="portfolio-3.html">Portfolio</a>
+                                        <a href="/portfolio">Portfolio</a>
 
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="services.html">Services</a>
+                                        <a href="/services">Services</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="publication.html">Publications</a>
+                                        <a href="/publication">Publications</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="contact.html">Contact Me</a>
+                                        <a href="/contact">Contact Me</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -151,7 +151,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">V.</a>
+                <a href="/" class="mil-logo">V.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -200,10 +200,10 @@
                                         </p>
                                     </div>
                                 </div>
-                                <a href="services.html" class="mil-button mil-arrow-place mil-btn-space">
+                                <a href="/services" class="mil-button mil-arrow-place mil-btn-space">
                                     <span>Explore My Services</span>
                                 </a>
-                                <a href="portfolio-3.html" class="mil-link mil-muted mil-arrow-place">
+                                <a href="/portfolio" class="mil-link mil-muted mil-arrow-place">
                                     <span>View My Work</span>
                                 </a>
                             </div>
@@ -312,7 +312,7 @@
                         <div class="mil-complex-text justify-content-center mil-up">
                             <h2 class="mil-h1 mil-muted mil-center">Through <span class="mil-thin">Technology.</span>
                             </h2>
-                            <a href="portfolio-3.html"
+                            <a href="/portfolio"
                                 class="mil-services-button mil-button mil-arrow-place"><span>Explore
                                     My Work</span></a>
                         </div>
@@ -320,7 +320,7 @@
 
                     <div class="row mil-services-grid m-0">
                         <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
-                            <a href="contact.html" class="mil-service-card-sm mil-up">
+                            <a href="/contact" class="mil-service-card-sm mil-up">
                                 <h5 class="mil-muted mil-mb-30">Web3 <br>Development</h5>
                                 <p class="mil-light-soft mil-mb-30">
                                     Building decentralized applications and smart contracts on Solana (Anchor framework)
@@ -332,7 +332,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
-                            <a href="contact.html" class="mil-service-card-sm mil-up">
+                            <a href="/contact" class="mil-service-card-sm mil-up">
                                 <h5 class="mil-muted mil-mb-30">Full-Stack <br>Web Development</h5>
                                 <p class="mil-light-soft mil-mb-30">
                                     Developing complete end-to-end web applications with MERN stack, Next.js, and
@@ -344,7 +344,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4 mil-services-grid-item p-0">
-                            <a href="contact.html" class="mil-service-card-sm mil-up">
+                            <a href="/contact" class="mil-service-card-sm mil-up">
                                 <h5 class="mil-muted mil-mb-30">UI/UX, Graphics & <br>Motion Design</h5>
                                 <p class="mil-light-soft mil-mb-30">
                                     Designing intuitive interfaces using Figma and Spline, with expertise in
@@ -381,7 +381,7 @@
                             </p>
 
                             <div class="mil-up">
-                                <a href="portfolio-3.html" class="mil-button mil-arrow-place mil-mb-60"><span>My
+                                <a href="/portfolio" class="mil-button mil-arrow-place mil-mb-60"><span>My
                                         Works</span></a>
                             </div>
 
@@ -639,7 +639,7 @@
                     </div>
                     <div class="col-lg-6 mil-mb-30">
                         <div class="mil-adaptive-right mil-up">
-                            <a href="publication.html" class="mil-link mil-dark mil-arrow-place">
+                            <a href="/publication" class="mil-link mil-dark mil-arrow-place">
                                 <span>View all</span>
                             </a>
                         </div>
@@ -716,19 +716,19 @@
                                     <nav class="mil-footer-menu">
                                         <ul>
                                             <li class="mil-up mil-active">
-                                                <a href="home-1.html">Home</a>
+                                                <a href="/">Home</a>
                                             </li>
                                             <li class="mil-up">
-                                                <a href="portfolio-3.html">Portfolio</a>
+                                                <a href="/portfolio">Portfolio</a>
                                             </li>
                                             <li class="mil-up">
-                                                <a href="services.html">Services</a>
+                                                <a href="/services">Services</a>
                                             </li>
                                             <li class="mil-up">
-                                                <a href="contact.html">Contact</a>
+                                                <a href="/contact">Contact</a>
                                             </li>
                                             <li class="mil-up">
-                                                <a href="publication.html">Publications</a>
+                                                <a href="/publication">Publications</a>
                                             </li>
                                         </ul>
                                     </nav>
