--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,15 +10,15 @@
         content="Explore Vardan Agarwal's portfolio featuring Web3, Full-Stack, and UI/UX design projects including GrowEase, Dabl Club, Linear App Clone, and more.">
 
     <!-- bootstrap grid css -->
-    <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
+    <link rel="stylesheet" href="/css/plugins/bootstrap-grid.css">
     <!-- font awesome css -->
-    <link rel="stylesheet" href="css/plugins/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/plugins/font-awesome.min.css">
     <!-- swiper css -->
-    <link rel="stylesheet" href="css/plugins/swiper.min.css">
+    <link rel="stylesheet" href="/css/plugins/swiper.min.css">
     <!-- fancybox css -->
-    <link rel="stylesheet" href="css/plugins/fancybox.min.css">
+    <link rel="stylesheet" href="/css/plugins/fancybox.min.css">
     <!-- ashley scss -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- page name -->
     <title>Vardan Agarwal - Portfolio</title>
 
@@ -71,7 +71,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">V.</a>
+                <a href="/" class="mil-logo">V.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -85,20 +85,20 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-has-children">
-                                        <a href="home-1.html">Homepage</a>
+                                        <a href="/">Homepage</a>
                                     </li>
                                     <li class="mil-active">
-                                        <a href="portfolio-3.html">Portfolio</a>
+                                        <a href="/portfolio">Portfolio</a>
 
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="services.html">Services</a>
+                                        <a href="/services">Services</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="publication.html">Publications</a>
+                                        <a href="/publication">Publications</a>
                                     </li>
                                     <li class="mil-has-children">
-                                        <a href="contact.html">Contact Me</a>
+                                        <a href="/contact">Contact Me</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -138,7 +138,7 @@
         <!-- frame -->
         <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">V.</a>
+                <a href="/" class="mil-logo">V.</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -163,8 +163,8 @@
                     <div class="mil-banner-content mil-center mil-up">
                         <div class="container">
                             <ul class="mil-breadcrumbs mil-center mil-mb-60">
-                                <li><a href="home-1.html">Homepage</a></li>
-                                <li><a href="portfolio-3.html">Portfolio</a></li>
+                                <li><a href="/">Homepage</a></li>
+                                <li><a href="/portfolio">Portfolio</a></li>
                             </ul>
                             <h1 class="mil-mb-60">My <span class="mil-thin">Projects</span></h1>
                             <p class="mil-light-soft">Web3, Full-Stack, and AI/ML projects showcasing technical
@@ -186,7 +186,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/1.jpg" alt="cover">
+                                                        <img src="/img/works/1.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -215,7 +215,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/2.jpg" alt="cover">
+                                                        <img src="/img/works/2.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -243,7 +243,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/3.jpg" alt="cover">
+                                                        <img src="/img/works/3.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -271,7 +271,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/4.jpg" alt="cover">
+                                                        <img src="/img/works/4.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -299,7 +299,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/5.jpg" alt="cover">
+                                                        <img src="/img/works/5.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -327,7 +327,7 @@
                                             <div class="mil-portfolio-item mil-slider-item" data-swiper-parallax="-30">
                                                 <div class="mil-cover-frame mil-drag">
                                                     <div class="mil-cover" data-swiper-parallax-scale="1.3">
-                                                        <img src="img/works/6.jpg" alt="cover">
+                                                        <img src="/img/works/6.jpg" alt="cover">
                                                     </div>
                                                 </div>
                                                 <div class="mil-descr" data-swiper-parallax-x="104%"
@@ -495,23 +495,23 @@
     <!-- wrapper end -->
 
     <!-- jQuery js -->
-    <script src="js/plugins/jquery.min.js"></script>
+    <script src="/js/plugins/jquery.min.js"></script>
     <!-- swup js -->
-    <script src="js/plugins/swup.min.js"></script>
+    <script src="/js/plugins/swup.min.js"></script>
     <!-- swiper js -->
-    <script src="js/plugins/swiper.min.js"></script>
+    <script src="/js/plugins/swiper.min.js"></script>
     <!-- fancybox js -->
-    <script src="js/plugins/fancybox.min.js"></script>
+    <script src="/js/plugins/fancybox.min.js"></script>
     <!-- gsap js -->
-    <script src="js/plugins/gsap.min.js"></script>
+    <script src="/js/plugins/gsap.min.js"></script>
     <!-- scroll smoother -->
-    <script src="js/plugins/smooth-scroll.js"></script>
+    <script src="/js/plugins/smooth-scroll.js"></script>
     <!-- scroll trigger js -->
-    <script src="js/plugins/ScrollTrigger.min.js"></script>
+    <script src="/js/plugins/ScrollTrigger.min.js"></script>
     <!-- scroll to js -->
-    <script src="js/plugins/ScrollTo.min.js"></script>
+    <script src="/js/plugins/ScrollTo.min.js"></script>
     <!-- ashley js -->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
