--- a/project-4.html
+++ b/project-4.html
@@ -52,7 +52,7 @@
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">vardan.me</p>
+                        <p class="mil-h3 mil-muted mil-thin">vardanagarwal.dev</p>
                     </div>
                 </div>
             </div>
